cli polish
